# QLMarkdown-winget

./: CMakeLists.txt  LEEME-Windows.md  README-Windows.md  README.md
QLMarkdown/: Settings.swift  ViewController.swift
cmark-extra/: c_log.h
cmark-extra/extensions/: emoji_utils.cpp  heads_utils.cpp  inlineimage.c
highlight-wrapper/: highlight_stubs.cpp
qlmarkdown-cli/: main.cpp
